# smart-traffic-optimizer-pro

./: CMakeLists.txt  README.md  build.bat  extract_punjab.bat  main.cpp  run.bat
data/: lahore_data.json
frontend/: dashboard.html  index.html
include/: BTree.h  DataStructureShowcase.h  Graph.h  HashTable.h  HttpServer.h  LRUCache.h  MinHeap.h  Models.h  OSMLoader.h  OSMParser.h  SessionManager.h  TrafficManager.h
python_tools/: download_osm_data.py
